[package]
name = "graf"
version = "0.0.1"
authors = ["Fredrik Roos <fredrik.roos@gmail.com>"]
repository = "https://github.com/fredrikroos/graf"
homepage = "https://github.com/fredrikroos/graf"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
futures = "0.1.15"
serde = "1.0"
serde_json = "1.0"
bytes = "0.4.5"
# tower = { git = "https://github.com/carllerche/tower" }
tokio-core = "0.1"
smallvec = "0.6.0"
failure = "0.1.1"
